syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.zequent.framework.services.mission.proto";
option java_outer_classname = "MissionAutonomyProto";
option go_package = "zequent/framework/gen/proto";


service MissionAutonomyService {

  rpc GetMission(GetMissionRequest) returns (MissionResponse);
  rpc CreateMission(CreateMissionRequest) returns(MissionResponse);
  rpc UpdateMission(UpdateMissionRequest) returns (MissionResponse);
  rpc DeleteMission(DeleteMissionRequest) returns (MissionResponse);
  rpc GetTask(GetTaskRequest) returns(TaskResponse);
  rpc GetTaskByFlightId(GetTaskRequest) returns(TaskResponse);
  rpc CreateTask (CreateTaskRequest) returns(TaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns(TaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns(TaskResponse);
  rpc GetScheduler(GetSchedulerRequest) returns(SchedulerResponse);
  rpc CreateScheduler(CreateSchedulerRequest) returns(SchedulerResponse);
  rpc UpdateScheduler(UpdateSchedulerRequest) returns(SchedulerResponse);
  rpc DeleteScheduler(DeleteSchedulerRequest) returns(SchedulerResponse);
  rpc StartTask(StartTaskRequest) returns(TaskResponse);
  rpc StopTask(StopTaskRequest) returns(TaskResponse);
}

message StartTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}

message StopTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}

message GetMissionRequest{
  RequestBase base = 1;
  string missionId = 2;
}

message CreateMissionRequest{
  RequestBase base = 1;
  MissionProtoDTO missionDTO = 2;
}

message UpdateMissionRequest{
  RequestBase base = 1;
  MissionProtoDTO missionDTO = 2;
  string missionId = 3;
}
message DeleteMissionRequest{
  RequestBase base = 1;
  string missionId = 2;
}

message GetTaskRequest{
  RequestBase base = 1;
  optional string taskId = 2;
  optional string flightId = 3;
}
message CreateTaskRequest{
  RequestBase base = 1;
  TaskProtoDTO taskDTO = 2;
}

message UpdateTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
  TaskProtoDTO taskDTO = 3;
}

message DeleteTaskRequest{
  RequestBase base = 1;
  string taskId = 2;
}

message CreateSchedulerRequest{
  RequestBase base = 1;
  SchedulerProtoDTO schedulerDTO = 2;
}

message UpdateSchedulerRequest{
  RequestBase base = 1;
  SchedulerProtoDTO schedulerDTO = 2;
  string schedulerId = 3;
}

message DeleteSchedulerRequest{
  RequestBase base = 1;
  string schedulerId = 2;
}

message GetSchedulerRequest{
  RequestBase base = 1;
  string schedulerId = 2;
}


message StartTaskResponse{
  optional bool hasErrors = 1;
  string tid = 2;
  string taskId = 3;
  google.protobuf.Timestamp timestamp = 4;
  oneof response {
    google.protobuf.Empty empty = 5;
    GlobalErrorMessage error = 6;
  }
}

message StopTaskResponse{
  optional bool hasErrors = 1;
  string tid = 2;
  string taskId = 3;
  google.protobuf.Timestamp timestamp = 4;
  oneof response {
    google.protobuf.Empty empty = 5;
    GlobalErrorMessage error = 6;
  }

}
message MissionResponse {
  optional bool hasErrors = 1;
  string tid = 2;
  string missionId = 3;
  google.protobuf.Timestamp timestamp = 4;
  oneof response {
    google.protobuf.Empty empty = 5;
    GlobalErrorMessage error = 6;
    CommandProgress progress = 7;
    MissionProtoDTO missionDTO = 8;
  }
}

message TaskResponse{
  optional bool hasErrors = 1;
  string tid = 2;
  string taskId = 3;
  google.protobuf.Timestamp timestamp = 4;
  oneof response {
    google.protobuf.Empty empty = 5;
    GlobalErrorMessage error = 6;
    CommandProgress progress = 7;
    TaskProtoDTO taskDTO = 8;
  }
}

message SchedulerResponse{
  optional bool hasErrors = 1;
  string tid = 2;
  string schedulerId = 3;
  google.protobuf.Timestamp timestamp = 4;
  oneof response {
    google.protobuf.Empty empty = 5;
    GlobalErrorMessage error = 6;
    CommandProgress progress = 7;
    SchedulerProtoDTO schedulerDTO = 8;
  }
}


